fixed the 345 media queries ( added responsiveness )

--- a/other-file/about/about.html
+++ b/other-file/about/about.html
@@ -57,7 +57,7 @@
           </div>
           <div class="st__img six">
             <img src="/public/vscode-logo.png" alt="">
-            <p class="img__text prgphFnt">VSCODE</p>
+            <p class="img__text prgphFnt vscode-text">VSCODE</p>
           </div>
         </div>
       </div>
