Added no text selection on all of the text

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="cursor"></div>
-    <main class="main__content container">
+    <main class="main__content container noselect">
       <section class="social__link">
         <div class="link__line slideUp"></div>
         <a href="" class="slideUp"><img src="./facebook.svg" alt="facebook icon" class="social__icon"></a>
