--- a/other-file/contact/contact.html
+++ b/other-file/contact/contact.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <div class="cursor"></div>
-  <main class="contact__container">
+  <main class="contact__container noselect">
     <section class="home__links slideUp">
       <a href="/index.html"><button type="button" class="headerFnt home__btn"></button></a>
     </section>
