--- a/other-file/work/work.html
+++ b/other-file/work/work.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <div class="cursor"></div>
-  <main class="work__container">
+  <main class="work__container noselect">
     <section class="home__link slideUp">
         <a href="/index.html"><button type="button" class="headerFnt home__btn"></button></a>
     </section>
