Changes a lot of things

--- a/index.html
+++ b/index.html
@@ -15,14 +15,13 @@
     <main class="main__content container noselect">
       <section class="social__link">
         <div class="link__line slideUp"></div>
-        <a href="" class="slideUp"><img src="./facebook.svg" alt="facebook icon" class="social__icon"></a>
-        <a href="" class="slideUp"><img src="./linkedin.svg" alt="linkedin icon" class="social__icon"></a>
-        <a href="" class="slideUp"><img src="./twitter.svg" alt="twitter icon" class="social__icon"></a>
-        <a href="" class="slideUp"><img src="./github.svg" alt="github icon" class="social__icon"></a>
+        <a href="https://www.facebook.com/profile.php?id=100054045430459" class="slideUp" target="_blank"><img src="./facebook.svg" alt="facebook icon" class="social__icon"></a>
+        <a href="https://www.instagram.com/paradoxzxz?igshid=OGQ5ZDc2ODk2ZA%3D%3D" class="slideUp" target="_blank"><img src="./bxl-instagram (1).svg" alt="twitter icon" class="social__icon"></a>
+        <a href="" class="slideUp" target="_blank"><img src="./github.svg" alt="github icon" class="social__icon"></a>
         <div class="link__vertical__line slideUp"></div>
       </section>
       <section class="hero__description">
-        <h3 class="headerFnt slideUp">Mark Ghian Francis</h3>
+        <h3 class="headerFnt slideUp">Edgar Allan Misagal</h3>
         <p class="prgphFnt slideUp">Front - End Developer / UI - UX Designer</p>
         <p class="prgphFnt slideUp">Currently Studying Bachelor of Science in
           Information Technology at Rizal Technological
