--- a/other-file/about/about.html
+++ b/other-file/about/about.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz@9..40&family=DM+Serif+Display&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/styles/components/about.css">
-  <title>About - ghian</title>
+  <title>About - Edgar</title>
 </head>
 <body>
   <div class="cursor"></div>
@@ -20,12 +20,12 @@
       <h1 class="about__title headerFnt slideUp">About me.</h1>
       <img 
         src="https://fakeimg.pl/600x400"
-        data-src="/profile-pic.png" 
+        data-src="/public/hero-sec-img.png" 
         alt="profile picture" 
         class="about__img lazy slideUp">
       <div class="about__description">
-        <h3 class="headerFnt feature__text slideUp">I'm Ghian. A designer, coder and maker.</h3>
-        <p class="prgphFnt prgph">Hey There, My name is Mark Ghian, a UI/UX designer and front - end Developer with a passion for creating user-friendly and visually appealing websites and web applications</p>
+        <h3 class="headerFnt feature__text slideUp">I'm Edgar Allan. A designer, coder and maker.</h3>
+        <p class="prgphFnt prgph">Hey There, My name is Edgar Allan, a UI/UX designer and front - end Developer with a passion for creating user-friendly and visually appealing websites and web applications</p>
         <p class="prgphFnt prgph">I have 3 years of experience in the web development industry, and I've worked on a variety of projects, from small business websites to large-scale e-commerce platforms. I'm skilled in all aspects of web development, from front-end coding to back-end development, and I have a deep understanding of UI/UX design principles.</p>
         <p class="prgphFnt prgph">If you're looking for a web developer and UI/UX designer who
           can create a website or web application that meets your
@@ -46,10 +46,6 @@
           <div class="st__img three">
             <img src="/public/js-logo.png" alt="">
             <p class="img__text prgphFnt">JS</p>
-          </div>
-          <div class="st__img four">
-            <img src="/public/git-logo.png" alt="">
-            <p class="img__text prgphFnt">GIT</p>
           </div>
           <div class="st__img five">
             <img src="/public/figma-logo.png" alt="">
