--- a/other-file/contact/contact.html
+++ b/other-file/contact/contact.html
@@ -23,13 +23,12 @@
         <p class="prgphFnt contact_text">My inbox is open. I'm always happy to
           chat about code, design, or nothing in
           particular.</p>
-        <p class="email__link prgphFnt"><span>Email:</span> <a href="mailto:zetsuya6167@gmail.com" class="mail__link">zetsuya6167@gmail.com</a></p>
+        <p class="email__link prgphFnt"><span>Email:</span> <a href="mailto:misagaledgarallan@gmail.com" class="mail__link">misagaledgarallan@gmail.com</a></p>
         <p class="other__link prgphFnt">Feel free to reach out through any platforms below:</p>
         <ul class="platforms__link prgphFnt">
-          <li class="links"><a href="">Linkedin</a></li>
           <li class="links"><a href="">Github</a></li>
-          <li class="links"><a href="">Facebook</a></li>
-          <li class="links"><a href="">Twitter</a></li>
+          <li class="links"><a href="https://www.facebook.com/profile.php?id=100054045430459" target="_blank">Facebook</a></li>
+          <li class="links"><a href="https://www.instagram.com/paradoxzxz?igshid=OGQ5ZDc2ODk2ZA%3D%3D" target="_blank">Instagram</a></li>
         </ul>
       </div>
     </section>
