--- a/other-file/work/work.html
+++ b/other-file/work/work.html
@@ -24,60 +24,55 @@
       </section>
       <section class="work__content slideUp">
         <!--?PROJECT 1-->
-        <h3 class="headerFnt project__title1">Simple Calculator</h3>
+        <h3 class="headerFnt project__title1">Financial Counter</h3>
         <div class="work__image__one work__img-wrapper">
           <img 
             src="https://fakeimg.pl/600x400"
-            data-src="/calculator.png" 
+            data-src="/public/project-4.png" 
             alt="" 
             class="work__img lazy loading">
         </div>
         <div class="work__info-container content__text1">
-          <h3 class="headerFnt project__title2">Simple Calculator</h3>
-          <p class="prgphFnt work__info">This site is the second project i created using vanilla Javascript. This calculator is simple it only do arithmetic operation</p>
+          <h3 class="headerFnt project__title2">Financial Counter</h3>
+          <p class="prgphFnt work__info">
+            we created this project on the first sem of our first year this system is a financial counter that helps individuals view their financial status directly. 
+          </p>
           <div class="tools__used">
-            <p class="prgphFnt">Vanilla CSS</p>
-            <p class="prgphFnt">Vanilla JS</p>
-            <p class="prgphFnt">HTML</p>
+            <p class="prgphFnt">C++</p>
           </div>
           <div class="link__previews">
             <div class="preview__live">
-              <a href="https://hummydev7.github.io/Calculator/" target='_blank'><button class="live__btn prgphFnt">Live Preview</button></a>
-              <img src="/public/external-link.svg" alt="">
-            </div>
-            <div class="preview__code">
-              <a href="https://github.com/HummyDev7/Calculator"  target='_blank'>
-                <button class="live__btn prgphFnt">View Code</button>
-              </a>
+              <a href="/public/F.P in 1st yr 1st sem .docx.pdf" target='_blank'><button class="live__btn prgphFnt">Live Preview</button></a>
               <img src="/public/external-link.svg" alt="">
             </div>
           </div>
         </div>
          <!--?PROJECT 2-->
-         <h3 class="headerFnt project__title1">Anime Streaming Dashboard</h3>
+         <h3 class="headerFnt project__title1">Quizzard Terminal Based Game</h3>
          <div class="work__image__two work__img-wrapper">
           <img 
             src="https://fakeimg.pl/600x400"
-            data-src="/anime-dashboard.png" 
+            data-src="/public/project-2.png" 
             alt="" 
             class="work__img lazy loading">
         </div>
          <div class="work__info-container content__text2">
-           <h3 class="headerFnt project__title2">Anime Streaming Dashboard</h3>
-           <p class="prgphFnt work__info">This project is created using only vanilla CSS it is not functional it is only static design and it uses both flex box and grid</p>
+           <h3 class="headerFnt project__title2">Quizzard Terminal Based Game</h3>
+           <p class="prgphFnt work__info">
+              Me and my groupmates created this project on second sem of our first year and this project is a quiz game that i based on console it help students to practice their knowledge by playing this game.
+           </p>
            <div class="tools__used">
-             <p class="prgphFnt">Vanilla CSS</p>
-             <p class="prgphFnt">HTML</p>
+             <p class="prgphFnt">C++</p>
            </div>
            <div class="link__previews">
              <div class="preview__live">
-               <a href="https://hummydev7.github.io/anime-streaming-dashboard/" target='_blank'>
+               <a href="/public/Finals-template.pdf" target='_blank'>
                 <button class="live__btn prgphFnt">Live Preview</button>
               </a>
                <img src="/public/external-link.svg" alt="">
              </div>
              <div class="preview__code">
-               <a href="https://github.com/HummyDev7/anime-streaming-dashboard" target='_blank'>
+               <a href="https://github.com/HummyDev7/quiz-Game-" target='_blank'>
                 <button class="live__btn prgphFnt">View Code</button>
               </a>
                <img src="/public/external-link.svg" alt="">
@@ -85,127 +80,26 @@
            </div>
          </div>
          <!--?PROJECT 3-->
-         <h3 class="headerFnt project__title1">Web Library</h3>
+         <h3 class="headerFnt project__title1">Quizzard Mobile UI Design</h3>
          <div class="work__image__three work__img-wrapper">
           <img 
             src="https://fakeimg.pl/600x400"
-            data-src="/web-library.png" 
+            data-src="/public/project-3.png" 
             alt="" 
             class="work__img lazy loading">
         </div>
          <div class="work__info-container content__text3">
-           <h3 class="headerFnt project__title2">Web Library</h3>
-           <p class="prgphFnt work__info">This is a project on the full stack javascript which uses object to store the library information</p>
+           <h3 class="headerFnt project__title2">Quizzard Mobile UI Design</h3>
+           <p class="prgphFnt work__info">
+            This project is a UI / UX Design that we created for our mobile game named quizzard this game is inspired on the quizzard console based game that we created.
+           </p>
            <div class="tools__used">
-            <p class="prgphFnt">Vanilla CSS</p>
-            <p class="prgphFnt">Vanilla JS</p>
-            <p class="prgphFnt">HTML</p>
+            <p class="prgphFnt">Figma</p>
            </div>
            <div class="link__previews">
              <div class="preview__live">
-               <a href="https://hummydev7.github.io/Library" target='_blank'>
+               <a href="https://www.figma.com/file/v8twZOugy55zUjzt8GIU2h/HCI-Project?type=design&mode=design&t=VmQz2R6THi2qgjas-1" target='_blank'>
                 <button class="live__btn prgphFnt">Live Preview</button>
-              </a>
-               <img src="/public/external-link.svg" alt="">
-             </div>
-             <div class="preview__code">
-               <a href="https://github.com/HummyDev7/Library"  target='_blank'>
-                <button class="live__btn prgphFnt">View Code</button>
-              </a>
-               <img src="/public/external-link.svg" alt="">
-             </div>
-           </div>
-         </div>
-         <!--?PROJECT 4-->
-         <h3 class="headerFnt project__title1">Sketchy Etch</h3>
-         <div class="work__image__four work__img-wrapper">
-          <img 
-            src="https://fakeimg.pl/600x400"
-            data-src="/sketch-etch.png" 
-            alt="" 
-            class="work__img lazy loading">
-        </div>
-         <div class="work__info-container content__text4">
-           <h3 class="headerFnt project__title2">Sketchy Etch</h3>
-           <p class="prgphFnt work__info">This project is a simple website in which you can draw and write soemthing  by just hovering your mouse inside the canvas</p>
-           <div class="tools__used">
-            <p class="prgphFnt">Vanilla CSS</p>
-            <p class="prgphFnt">Vanilla JS</p>
-            <p class="prgphFnt">HTML</p>
-           </div>
-           <div class="link__previews">
-             <div class="preview__live">
-               <a href="https://hummydev7.github.io/sketchy-etch" target='_blank'>
-                <button class="live__btn prgphFnt">Live Preview</button>
-              </a>
-               <img src="/public/external-link.svg" alt="">
-             </div>
-             <div class="preview__code">
-               <a href="https://github.com/HummyDev7/sketchy-etch" target='_blank'>
-                <button class="live__btn prgphFnt">View Code</button>
-              </a>
-               <img src="/public/external-link.svg" alt="">
-             </div>
-           </div>
-         </div>
-         <!--?PROJECT 5-->
-         <h3 class="headerFnt project__title1">One Piece RPS</h3>
-         <div class="work__image__five work__img-wrapper">
-          <img 
-            src="https://fakeimg.pl/600x400"
-            data-src="/rps.png" 
-            alt="" 
-            class="work__img lazy loading">
-        </div>
-         <div class="work__info-container content__text5">
-           <h3 class="headerFnt project__title2">One Piece RPS</h3>
-           <p class="prgphFnt work__info">This is the first javascript i created i used DOM in here to make it functional the theme of this Rock paper scissors game is one piece</p>
-           <div class="tools__used">
-            <p class="prgphFnt">Vanilla CSS</p>
-            <p class="prgphFnt">Vanilla JS</p>
-            <p class="prgphFnt">HTML</p>
-           </div>
-           <div class="link__previews">
-             <div class="preview__live">
-               <a href="https://hummydev7.github.io/one-piece-RPS/" target='_blank'>
-                <button class="live__btn prgphFnt">Live Preview</button>
-              </a>
-               <img src="/public/external-link.svg" alt="">
-             </div>
-             <div class="preview__code">
-               <a href="https://github.com/HummyDev7/one-piece-RPS" target='_blank'>
-                <button class="live__btn prgphFnt">View Code</button>
-               </a>
-               <img src="/public/external-link.svg" alt="">
-             </div>
-           </div>
-         </div>
-         <!--?PROJECT 6-->
-         <h3 class="headerFnt project__title1">Sign Up Form</h3>
-         <div class="work__image__six work__img-wrapper">
-          <img 
-            src="https://fakeimg.pl/600x400"
-            data-src="/signup-form.png" 
-            alt="" 
-            class="work__img lazy loading" >
-        </div>
-         <div class="work__info-container content__text6">
-           <h3 class="headerFnt project__title2">Sign Up Form</h3>
-           <p class="prgphFnt work__info">A simple sign up form with a simple theme and is based on a TOP project in which i apply my knowledge about input styling and so on</p>
-           <div class="tools__used">
-            <p class="prgphFnt">Vanilla CSS</p>
-            <p class="prgphFnt">HTML</p>
-           </div>
-           <div class="link__previews">
-             <div class="preview__live">
-               <a href="https://hummydev7.github.io/signup-form/" target='_blank'>
-                <button class="live__btn prgphFnt">Live Preview</button>
-              </a>
-               <img src="/public/external-link.svg" alt="">
-             </div>
-             <div class="preview__code">
-               <a href="https://github.com/HummyDev7/signup-form" target='_blank'>
-                <button class="live__btn prgphFnt">View Code</button>
               </a>
                <img src="/public/external-link.svg" alt="">
              </div>
