Changes images and project in work.html

--- a/other-file/work/work.html
+++ b/other-file/work/work.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <div class="cursor"></div>
-  <main class="work__container noselect">
+  <main class="work__container">
     <section class="home__link slideUp">
         <a href="/index.html"><button type="button" class="headerFnt home__btn"></button></a>
     </section>
@@ -24,81 +24,75 @@
       </section>
       <section class="work__content slideUp">
         <!--?PROJECT 1-->
-        <h3 class="headerFnt project__title1">Financial Counter</h3>
+        <h3 class="headerFnt project__title1">Console Quiz game</h3>
         <div class="work__image__one work__img-wrapper">
           <img 
             src="https://fakeimg.pl/600x400"
-            data-src="./project-4.png" 
+            data-src="/public/project-2.png" 
             alt="" 
             class="work__img lazy loading">
         </div>
         <div class="work__info-container content__text1">
-          <h3 class="headerFnt project__title2">Financial Counter</h3>
-          <p class="prgphFnt work__info">
-            we created this project on the first sem of our first year this system is a financial counter that helps individuals view their financial status directly. 
-          </p>
+          <h3 class="headerFnt project__title2">Console Quiz game</h3>
+          <p class="prgphFnt work__info">This projet is created on first sem of my first year as a finala project for the programming subject</p>
           <div class="tools__used">
             <p class="prgphFnt">C++</p>
           </div>
           <div class="link__previews">
             <div class="preview__live">
-              <a href="/public/F.P in 1st yr 1st sem .docx.pdf" target='_blank'><button class="live__btn prgphFnt">Live Preview</button></a>
+              <a href="https://hummydev7.github.io/Calculator/" target='_blank'><button class="live__btn prgphFnt">Live Preview</button></a>
+              <img src="/public/external-link.svg" alt="">
+            </div>
+            <div class="preview__code">
+              <a href="https://github.com/HummyDev7/Calculator"  target='_blank'>
+                <button class="live__btn prgphFnt">View Code</button>
+              </a>
               <img src="/public/external-link.svg" alt="">
             </div>
           </div>
         </div>
          <!--?PROJECT 2-->
-         <h3 class="headerFnt project__title1">Quizzard Terminal Based Game</h3>
+         <h3 class="headerFnt project__title1">UI / UX Design Quizzard</h3>
          <div class="work__image__two work__img-wrapper">
           <img 
             src="https://fakeimg.pl/600x400"
-            data-src="./project-2.png" 
+            data-src="/project-3.png" 
             alt="" 
             class="work__img lazy loading">
         </div>
          <div class="work__info-container content__text2">
-           <h3 class="headerFnt project__title2">Quizzard Terminal Based Game</h3>
-           <p class="prgphFnt work__info">
-              Me and my groupmates created this project on second sem of our first year and this project is a quiz game that i based on console it help students to practice their knowledge by playing this game.
-           </p>
+           <h3 class="headerFnt project__title2">UI / UX Design Quizzard</h3>
+           <p class="prgphFnt work__info">This project is a ui design project that we created in the second sem of our first year for the subject HCI</p>
            <div class="tools__used">
-             <p class="prgphFnt">C++</p>
+             <p class="prgphFnt">Figma</p>
            </div>
            <div class="link__previews">
              <div class="preview__live">
-               <a href="/public/Finals-template.pdf" target='_blank'>
+               <a href="https://hummydev7.github.io/anime-streaming-dashboard/" target='_blank'>
                 <button class="live__btn prgphFnt">Live Preview</button>
-              </a>
-               <img src="/public/external-link.svg" alt="">
-             </div>
-             <div class="preview__code">
-               <a href="https://github.com/HummyDev7/quiz-Game-" target='_blank'>
-                <button class="live__btn prgphFnt">View Code</button>
               </a>
                <img src="/public/external-link.svg" alt="">
              </div>
            </div>
          </div>
          <!--?PROJECT 3-->
-         <h3 class="headerFnt project__title1">Quizzard Mobile UI Design</h3>
+         <h3 class="headerFnt project__title1">Financial Counter</h3>
          <div class="work__image__three work__img-wrapper">
           <img 
             src="https://fakeimg.pl/600x400"
-            data-src="./project-3.png" 
+            data-src="/public/project-4.png" 
             alt="" 
             class="work__img lazy loading">
         </div>
          <div class="work__info-container content__text3">
-           <h3 class="headerFnt project__title2">Quizzard Mobile UI Design</h3>
-           <p class="prgphFnt work__info">
-            This project is a UI / UX Design that we created for our mobile game named quizzard this game is inspired on the quizzard console based game that we created.
-           </p>
+           <h3 class="headerFnt project__title2">Financial Counter</h3>
+           <p class="prgphFnt work__info">This project is a financial counter that help somone see their financial</p>
            <div class="tools__used">
-            <p class="prgphFnt">Figma</p>
+            <p class="prgphFnt">C++</p>
            </div>
            <div class="link__previews">
              <div class="preview__live">
-               <a href="https://www.figma.com/file/v8twZOugy55zUjzt8GIU2h/HCI-Project?type=design&mode=design&t=VmQz2R6THi2qgjas-1" target='_blank'>
+               <a href="https://hummydev7.github.io/Library" target='_blank'>
                 <button class="live__btn prgphFnt">Live Preview</button>
               </a>
                <img src="/public/external-link.svg" alt="">
