Change file path of the two project images

--- a/other-file/work/work.html
+++ b/other-file/work/work.html
@@ -28,7 +28,7 @@
         <div class="work__image__one work__img-wrapper">
           <img 
             src="https://fakeimg.pl/600x400"
-            data-src="/public/project-2.png" 
+            data-src="/project-2.png" 
             alt="" 
             class="work__img lazy loading">
         </div>
@@ -80,7 +80,7 @@
          <div class="work__image__three work__img-wrapper">
           <img 
             src="https://fakeimg.pl/600x400"
-            data-src="/public/project-4.png" 
+            data-src="/project-4.png" 
             alt="" 
             class="work__img lazy loading">
         </div>
