Changes file path in about html image

--- a/other-file/about/about.html
+++ b/other-file/about/about.html
@@ -20,7 +20,7 @@
       <h1 class="about__title headerFnt slideUp">About me.</h1>
       <img 
         src="https://fakeimg.pl/600x400"
-        data-src="/public/hero-sec-img.png" 
+        data-src="/hero-sec-img.png" 
         alt="profile picture" 
         class="about__img lazy slideUp">
       <div class="about__description">
