Adding href links

--- a/other-file/work/work.html
+++ b/other-file/work/work.html
@@ -44,7 +44,7 @@
               <img src="/public/external-link.svg" alt="">
             </div>
             <div class="preview__code">
-              <a href="https://github.com/HummyDev7/Calculator"  target='_blank'>
+              <a href="https://github.com/HummyDev7/quiz-Game-"  target='_blank'>
                 <button class="live__btn prgphFnt">View Code</button>
               </a>
               <img src="/public/external-link.svg" alt="">
@@ -68,7 +68,7 @@
            </div>
            <div class="link__previews">
              <div class="preview__live">
-               <a href="https://hummydev7.github.io/anime-streaming-dashboard/" target='_blank'>
+               <a href="https://www.figma.com/file/v8twZOugy55zUjzt8GIU2h/HCI-Project?type=design&mode=design&t=VmQz2R6THi2qgjas-1" target='_blank'>
                 <button class="live__btn prgphFnt">Live Preview</button>
               </a>
                <img src="/public/external-link.svg" alt="">
@@ -92,7 +92,7 @@
            </div>
            <div class="link__previews">
              <div class="preview__live">
-               <a href="https://hummydev7.github.io/Library" target='_blank'>
+               <a href="/F.P in 1st yr 1st sem .docx.pdf" target='_blank'>
                 <button class="live__btn prgphFnt">Live Preview</button>
               </a>
                <img src="/public/external-link.svg" alt="">
