Changed the hreft value

--- a/other-file/work/work.html
+++ b/other-file/work/work.html
@@ -40,7 +40,7 @@
           </div>
           <div class="link__previews">
             <div class="preview__live">
-              <a href="https://hummydev7.github.io/Calculator/" target='_blank'><button class="live__btn prgphFnt">Live Preview</button></a>
+              <a href="/Finals-template.pdf" target='_blank'><button class="live__btn prgphFnt">Live Preview</button></a>
               <img src="/public/external-link.svg" alt="">
             </div>
             <div class="preview__code">
