maybe last commit

--- a/index.html
+++ b/index.html
@@ -8,16 +8,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz@9..40&family=DM+Serif+Display&display=swap" rel="stylesheet">
       <!-- <script src="src/changeText.js" defer></script> -->
-    <title>Ghian Francis</title>
+    <title>Edgar Allan</title>
   </head>
   <body>
-    <div class="cursor"></div>
     <main class="main__content container noselect">
       <section class="social__link">
         <div class="link__line slideUp"></div>
         <a href="https://www.facebook.com/profile.php?id=100054045430459" class="slideUp" target="_blank"><img src="./facebook.svg" alt="facebook icon" class="social__icon"></a>
         <a href="https://www.instagram.com/paradoxzxz?igshid=OGQ5ZDc2ODk2ZA%3D%3D" class="slideUp" target="_blank"><img src="./bxl-instagram (1).svg" alt="twitter icon" class="social__icon"></a>
-        <a href="" class="slideUp" target="_blank"><img src="./github.svg" alt="github icon" class="social__icon"></a>
+        <a href="https://github.com/misagal19" class="slideUp" target="_blank"><img src="./github.svg" alt="github icon" class="social__icon"></a>
         <div class="link__vertical__line slideUp"></div>
       </section>
       <section class="hero__description">
