--- a/other-file/contact/contact.html
+++ b/other-file/contact/contact.html
@@ -8,10 +8,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz@9..40&family=DM+Serif+Display&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/styles/components/contact.css">
-  <title>Contact - ghian</title>
+  <title>Contact - Edgar</title>
 </head>
 <body>
-  <div class="cursor"></div>
   <main class="contact__container noselect">
     <section class="home__links slideUp">
       <a href="/index.html"><button type="button" class="headerFnt home__btn"></button></a>
@@ -26,7 +25,7 @@
         <p class="email__link prgphFnt"><span>Email:</span> <a href="mailto:misagaledgarallan@gmail.com" class="mail__link">misagaledgarallan@gmail.com</a></p>
         <p class="other__link prgphFnt">Feel free to reach out through any platforms below:</p>
         <ul class="platforms__link prgphFnt">
-          <li class="links"><a href="">Github</a></li>
+          <li class="links"><a href="https://github.com/misagal19" target="_blank">Github</a></li>
           <li class="links"><a href="https://www.facebook.com/profile.php?id=100054045430459" target="_blank">Facebook</a></li>
           <li class="links"><a href="https://www.instagram.com/paradoxzxz?igshid=OGQ5ZDc2ODk2ZA%3D%3D" target="_blank">Instagram</a></li>
         </ul>
