--- a/other-file/work/work.html
+++ b/other-file/work/work.html
@@ -8,10 +8,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz@9..40&family=DM+Serif+Display&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/styles/components/work.css">
-  <title>Ghian - Work</title>
+  <title>Work - Edgar</title>
 </head>
 <body>
-  <div class="cursor"></div>
   <main class="work__container">
     <section class="home__link slideUp">
         <a href="/index.html"><button type="button" class="headerFnt home__btn"></button></a>
