--- a/other-file/about/about.html
+++ b/other-file/about/about.html
@@ -11,7 +11,6 @@
   <title>About - Edgar</title>
 </head>
 <body>
-  <div class="cursor"></div>
   <main class="about__container noselect">
     <section class="home__links slideUp">
       <a href="/index.html"><button type="button" class="headerFnt home__btn"></button></a>
@@ -30,7 +29,11 @@
         <p class="prgphFnt prgph">If you're looking for a web developer and UI/UX designer who
           can create a website or web application that meets your
           needs and exceeds your expectations, I would love to hear
-          from you.</p>
+          from you.
+        </p>
+        <p class="prgphFnt prgph">
+          <a href="/Professional-Resume.pdf" style="color: var(--clr-clay-ash);" class="resume" target="_blank">My Resume.</a>
+        </p>
       </div>
       <div class="skill__tools">
         <h1 class="skill__tools__title headerFnt">Skills & Tools</h1>
